--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
   "name": "create-dino",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.6",
   "description": "Quickly create business templates",
-  "author": "",
+  "author": "yucccc",
   "license": "MIT",
-  "keywords": ["cli"],
+  "keywords": [
+    "cli"
+  ],
   "main": "bin/index.js",
   "bin": {
     "create-dino": "bin/index.js",
     "dino": "bin/index.js"
   },
   "scripts": {
+    "dev": "unbuild --stub",
     "debug": "node --inspect-brk ./bin/index.js",
-    "preinstall": "npx only-allow pnpm"
+    "build": "unbuild",
+    "prepublishOnly": "npm run build"
   },
-  "files": ["bin", "src", "template"],
-  "dependencies": {},
+  "files": [
+    "bin",
+    "dist",
+    "template"
+  ],
   "devDependencies": {
     "cross-spawn": "^7.0.3",
     "kolorist": "^1.5.1",
     "minimist": "^1.2.6",
-    "prompts": "^2.4.2"
+    "prompts": "^2.4.2",
+    "unbuild": "^0.9.4"
   }
 }
