--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-dino",
   "type": "module",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Quickly create business templates",
   "author": "yucccc",
   "license": "MIT",
@@ -25,6 +25,7 @@
     "template"
   ],
   "devDependencies": {
+    "@types/node": "^18.11.8",
     "cross-spawn": "^7.0.3",
     "kolorist": "^1.5.1",
     "minimist": "^1.2.6",
