feat(temp-react): add build

--- a/template/react-component-library/package.json
+++ b/template/react-component-library/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-component-library",
+  "name": "@yucccc/template-react-component-library",
   "version": "0.0.1",
   "description": "template for react component",
   "main": "./dist/cjs/index.js",
@@ -43,9 +43,8 @@
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.55.0",
     "typescript": "^4.8.4",
-    "vite": "^3.2.2"
-  },
-  "dependencies": {
+    "vite": "^3.2.2",
     "postcss": "^8.4.18"
-  }
+  },
+  "dependencies": {}
 }
